ajustes de lazyload de imagens

--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -2,16 +2,13 @@
 @import '../../styles/breakpoints';
 
 .section {
-    background-image: url('../../../public/assets/marco-rodrigues-coach-business.webp');
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: cover;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-
+    position: relative;
+    overflow: hidden;
+    
     width: 100%;
     height: 100vh;
 
@@ -20,6 +17,12 @@
     @media (max-width: $desktop_sm) {
         padding: 6em 1em;
         justify-content: flex-start;
+    }
+
+    &__bg {
+        position: absolute;
+        inset: 0;
+        z-index: -1;
     }
 
     &__container {
