ajustes de texto e logotipos de parceiros

--- a/app/palestras/chamadaSection/Chamada.module.scss
+++ b/app/palestras/chamadaSection/Chamada.module.scss
@@ -14,7 +14,7 @@
     }
 
     background-image: url('/assets/fundo-desfocado-empresarial.webp');
-    background-position: center;
+    background-position: center 25%;
     background-repeat: no-repeat;
     background-size: cover;
 
