--- a/app/sobre/citacaoSection/Citacao.module.scss
+++ b/app/sobre/citacaoSection/Citacao.module.scss
@@ -42,8 +42,8 @@
                 width: 70px;
                 height: 70px;
                 top: -40px;
-                left: -40px;
-                background-image: url('/assets/abreAspas.svg');
+                left: -55px;
+                background-image: url('/assets/abreAspas-branco.svg');
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;
@@ -62,7 +62,7 @@
                 height: 70px;
                 bottom: -30px;
                 right: 0;
-                background-image: url('/assets/fechaAspas.svg');
+                background-image: url('/assets/fechaAspas-branco.svg');
                 background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;
