ajustes nos termos e responsabilidades

--- a/app/_components/footer/Footer.module.scss
+++ b/app/_components/footer/Footer.module.scss
@@ -54,6 +54,8 @@
 
                 @media (max-width: $desktop_sm) {
                     text-align: center;
+                    align-self: center;
+                    margin-top: 1rem;
                 }
 
                 &:hover {
@@ -87,6 +89,10 @@
             a {
                 display: flex;
                 align-self: flex-start;
+
+                @media (max-width: $desktop_sm) {
+                    align-self: center;
+                }
             }
         }
     }
