background collor da section final da home

--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -2,6 +2,7 @@
 @import '../../styles/breakpoints';
 
 .section {
+    background-color: $brand-dark-blue;
     display: flex;
     flex-direction: column;
     justify-content: center;
