--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -2,12 +2,14 @@
 @import '../../styles/breakpoints';
 
 .section {
+    background-color: $brand-dark-blue;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
     position: relative;
     overflow: hidden;
+    z-index: -2;
     
     width: 100%;
     height: 100vh;
