criando o abiente de teste

--- a/app/_components/footer/Footer.module.scss
+++ b/app/_components/footer/Footer.module.scss
@@ -67,6 +67,7 @@
         &__lvtext {
             display: flex;
             flex-direction: row;
+            align-self: flex-start;
             gap: .5em;
             height: auto;
 
@@ -84,6 +85,7 @@
                 font-weight: 300;
                 letter-spacing: 0.03em;
                 margin-top: 3px;
+                align-self: flex-end;
             }
 
             a {
