--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -116,7 +116,7 @@ section {
 }
 
 body {
-	background-color: rgba(244, 244, 245, 1);
+	background-color: #fcfcfc;
 	font-family: "Afacad", sans-serif;
 }
 
