--- a/app/_components/button/Button.module.scss
+++ b/app/_components/button/Button.module.scss
@@ -35,6 +35,7 @@
     text-decoration: none;
     transition: transform 0.4s ease;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    border: none;
 
     &:hover {
         transform: scale(1.1);
