--- a/app/home/section/Section.module.scss
+++ b/app/home/section/Section.module.scss
@@ -10,7 +10,7 @@
     position: relative;
     overflow: hidden;
     z-index: -2;
-    
+
     width: 100%;
     height: 100vh;
 
@@ -56,6 +56,16 @@
                 color: $text-light;
                 text-shadow: 0 2px 3px rgba(0, 0, 0, 1);
                 position: relative;
+
+                cite {
+                    font-size: .5em;
+                    font-weight: 300;
+                    font-style: italic;
+                    color: $text-light;
+                    text-align: center;
+                    color: $text-light;
+                    text-shadow: 0 2px 3px rgba(0, 0, 0, 1);
+                }
 
                 @media (max-width: $desktop_sm) {
                     font-size: 1.8rem;
