--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -29,3 +29,6 @@ $font-secondary: "Spectral", serif;
 $title-size: 32px;
 $subtitle-size: 24px;
 $text-size: 20px;
+
+$background-light: #f9f9f9;
+$background-card: #ffffff;
