--- a/app/blog/Blog.module.scss
+++ b/app/blog/Blog.module.scss
@@ -9,6 +9,11 @@
     margin: 0 auto;
     width: 100%;
 
+    @media (max-width: $desktop_sm) {
+        padding: 8em 0 0;
+    }
+
+
     &__spacer {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -19,11 +24,22 @@
         width: 100%;
         max-width: 1440px;
 
+        @media (max-width: $desktop_sm) {
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            padding: 0 1em;
+        }
+
         &__image {
             grid-column: 1 / span 1;
             width: 100%;
             height: auto;
             align-self: start;
+
+            @media (max-width: $desktop_sm) {
+                grid-row: 1;
+            }
         }
 
         &__container {
@@ -32,6 +48,11 @@
             flex-direction: column;
             justify-items: start;
             width: 100%;
+
+            @media (max-width: $desktop_sm) {
+                grid-row: 2;
+                grid-column: 1 / span 1;
+            }
 
             &__title {
                 grid-column: 2 / span 1;
@@ -56,6 +77,10 @@
                 font-family: $font-secondary;
                 margin-bottom: 2em;
                 width: 100%;
+
+                @media (max-width: $desktop_sm) {
+                    margin-bottom: 0;
+                }
             }
 
             &__icone {
