--- a/app/blog/[slug]/Slug.module.scss
+++ b/app/blog/[slug]/Slug.module.scss
@@ -8,19 +8,35 @@
     margin: 0 auto;
     padding: 8rem 8em;
 
-    &__coverImage {
-        width: 50%;
-        height: auto;
-        border-radius: 8px;
-        margin-bottom: 2rem;
-        grid-column: 2 / span 1;
+    @media (max-width: $desktop_sm) {
+        padding: 8em 1em;
+        width: 100%;
     }
+
 
     &__topContainer {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 2.5em;
         margin-bottom: 4em;
+
+        @media (max-width: $desktop_sm) {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+
+        &__coverImage {
+            width: 50%;
+            height: auto;
+            border-radius: 8px;
+            margin-bottom: 2rem;
+            grid-column: 2 / span 1;
+
+            @media (max-width: $desktop_sm) {
+                width: 100%;
+            }
+        }
 
         &__header {
             grid-column: 1 / span 1;
@@ -54,7 +70,7 @@
                     /* move levemente o ícone para a esquerda no hover */
                     svg,
                     .icon {
-                         animation: jump-left 700ms cubic-bezier(0.2, 0.8, 0.2, 1) infinite;
+                        animation: jump-left 700ms cubic-bezier(0.2, 0.8, 0.2, 1) infinite;
                         color: $color-complements;
                     }
                 }
@@ -94,7 +110,8 @@
                 line-height: 1.4em;
                 margin-bottom: 1em;
             }
-            &__authorAndDate{
+
+            &__authorAndDate {
                 display: flex;
                 align-items: center;
                 gap: 1rem;
@@ -111,10 +128,10 @@
                 }
 
                 &__date {
-                font-size: 0.8rem;
-                color: #666;
-                font-style: italic;
-            }
+                    font-size: 0.8rem;
+                    color: #666;
+                    font-style: italic;
+                }
             }
         }
     }
@@ -123,6 +140,10 @@
     &__contenContainer {
         margin: 0 auto;
         width: 75%;
+
+        @media (max-width: $desktop_sm) {
+            width: 100%;
+        }
 
         p {
             font-size: 20px;
@@ -159,14 +180,28 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    
+
 }
 
 /* keyframes para o pulo à esquerda */
 @keyframes jump-left {
-    0%   { transform: translateX(0); }
-    25%  { transform: translateX(-0.35rem); }
-    50%  { transform: translateX(-0.35rem); }
-    75%  { transform: translateX(-0.35rem); }
-    100% { transform: translateX(0); }
+    0% {
+        transform: translateX(0);
+    }
+
+    25% {
+        transform: translateX(-0.35rem);
+    }
+
+    50% {
+        transform: translateX(-0.35rem);
+    }
+
+    75% {
+        transform: translateX(-0.35rem);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
